# Gazebo-ROS-Omnivehicle

./: CMakeLists.txt  README.md  package.xml
config/: motor_control.yaml
launch/: vehicle.launch
src/: controller.cpp  low_level_ctrl.cpp  omni_controller.cpp  sensor.cpp
urdf/omni_wheel/: main.urdf.xacro  rim.urdf.xacro  roller.urdf.xacro
