<?xml version="1.0"?>
<package format="2">
  <name>omni_vehicle</name>
  <version>0.0.0</version>
  <description>Omnivehicle package</description>

  <license>TODO</license>
  <maintainer email="dimitris.chaikalis@nyu.edu">Dimitris Chaikalis</maintainer>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>

  </export>
</package>
